--- a/content/posts/naturaleza.mdx
+++ b/content/posts/naturaleza.mdx
@@ -1,9 +1,13 @@
 ---
 slug: naturaleza
-title: naturaleza
+title: naturaleza hermana
 date: 2021-05-08
 author: melissa
 tags:
   - naturaleza
 ---
-test
+**hola**
+
+![naturaleza](/images/nature.jpg "naturaleza")
+
+[](www.google.com)
