Update Posts “naturaleza”

--- a/content/posts/naturaleza.mdx
+++ b/content/posts/naturaleza.mdx
@@ -2,7 +2,7 @@
 slug: naturaleza
 title: naturaleza hermana
 date: 2021-05-08
-author: melissa
+author: Melissa
 tags:
   - naturaleza
 image: /images/nature.jpg
