--- a/content/posts/agricultura.mdx
+++ b/content/posts/agricultura.mdx
@@ -3,7 +3,7 @@ slug: agricultura
 title: "𝐋𝐮𝐢𝐬 𝐆𝐨𝐦𝐞𝐫𝐨: ❞𝐓𝐞𝐧𝐞𝐦𝐨𝐬 𝐪𝐮𝐞 𝐜𝐨𝐧𝐬𝐭𝐫𝐮𝐢𝐫
   𝐧𝐮𝐞𝐬𝐭𝐫𝐨 𝐩𝐫𝐨𝐩𝐢𝐨 𝐦𝐨𝐝𝐞𝐥𝐨 𝐝𝐞 𝐚𝐠𝐫𝐢𝐜𝐮𝐥𝐭𝐮𝐫𝐚❞"
 date: 2021-05-10
-author: melissa
+author: Melissa
 tags:
   - naturaleza
 image: /images/luis-gomero_blog.jpg
