Update Posts “agroecología”

--- a/content/posts/agroecología.mdx
+++ b/content/posts/agroecología.mdx
@@ -1,5 +1,5 @@
 ---
-slug: agroecología
+slug: agroecologia
 title: "𝐂𝐞𝐜𝐢𝐥𝐢𝐚 𝐌𝐞𝐧𝐝𝐢𝐨𝐥𝐚: ❞𝐌𝐞𝐝𝐢𝐚𝐧𝐭𝐞 𝐥𝐚
   𝐚𝐠𝐫𝐨𝐞𝐜𝐨𝐥𝐨𝐠𝐢́𝐚 𝐞𝐬 𝐩𝐨𝐬𝐢𝐛𝐥𝐞 𝐜𝐨𝐧𝐬𝐞𝐠𝐮𝐢𝐫 𝐮𝐬𝐚𝐫
   𝐚𝐠𝐫𝐨𝐪𝐮𝐢́𝐦𝐢𝐜𝐨𝐬 𝐬𝐢𝐧 𝐝𝐚𝐧̃𝐚𝐫 𝐥𝐚 𝐬𝐚𝐥𝐮𝐝 𝐝𝐞 𝐥𝐚𝐬
