Update Posts “𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬”

--- a/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
+++ b/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
@@ -6,11 +6,9 @@ date: 2021-05-12
 author: Melissa
 tags:
   - naturaleza
-image: /images/goggleblog.jpg
+image: /images/4.-choclos-cientificos.png
 ---
 ### El uso de alimentos transgénicos ha desatado un amplio debate. En la siguiente nota mencionaremos algunos puntos por los que son criticados.
-
-
 
 ![Foto: Telesur](/images/1_telesurtv.net.jpg "Foto: Telesur")
 
@@ -63,8 +61,6 @@ Finalmente, para asegurar la confiabilidad de los alimentos transgénicos se nec
 **¿Quién está detrás de los alimentos transgénicos?**
 
 Los grandes lobbys internacionales, especialmente financiados por las multinacionales del sector agroalimentario, como Bayern-Monsanto o Syngenta. Ellas apelan a todo tipo de estrategias para introducir sus productos e incrementar sus beneficios económicos. Sin embargo, la fuerte oposición ciudadana, especialmente en Europa, ha conseguido que grandes corporaciones, como BASF en Alemania, anuncien su retirada del mercado en este tipo de investigaciones.
-
-
 
 ![](/images/5.-cientifico.png)
 
