Update Posts “𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬”

--- a/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
+++ b/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
@@ -32,7 +32,7 @@ Para entenderlo mejor, en los cultivos transgénicos se introducen genes de espe
 
   ![](/images/agroalimentando.com.jpg)
 
-***Peligros de los transgénicos***
+**Peligros de los transgénicos**
 
 ![Foto: Wordpress](/images/wordpress.jpg "Empecemos a analizar la calidad de alimentos que ingerimos.")
 
@@ -62,7 +62,7 @@ Finalmente, para asegurar la confiabilidad de los alimentos transgénicos se nec
 
 Los grandes lobbys internacionales, especialmente financiados por las multinacionales del sector agroalimentario, como Bayern-Monsanto o Syngenta. Ellas apelan a todo tipo de estrategias para introducir sus productos e incrementar sus beneficios económicos. Sin embargo, la fuerte oposición ciudadana, especialmente en Europa, ha conseguido que grandes corporaciones, como BASF en Alemania, anuncien su retirada del mercado en este tipo de investigaciones.
 
-![](/images/5.-cientifico.png)
+![¿Quién está detrás de los alimentos transgénicos?](/images/5.-cientifico.png "¿Quién está detrás de los alimentos transgénicos?")
 
 ### **Los transgénicos en el Perú**
 
