--- a/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
+++ b/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
@@ -6,7 +6,7 @@ date: 2021-05-12
 author: Melissa
 tags:
   - naturaleza
-image: /images/4.-choclos-cientificos.png
+image: /images/1_telesurtv.net.jpg
 ---
 ### El uso de alimentos transgénicos ha desatado un amplio debate. En la siguiente nota mencionaremos algunos puntos por los que son criticados.
 
@@ -30,7 +30,7 @@ Para entenderlo mejor, en los cultivos transgénicos se introducen genes de espe
   * Canola, papayas, calabazas, berenjenas, frijoles, melones, achicoria, lechuga y girasol.
   * Algodón. Nosotros lo importamos de Estados Unidos, India o China. Nos llega como fibra o ya procesado en hilos, telas y prendas
 
-  ![](/images/agroalimentando.com.jpg)
+  ![En los cultivos transgénicos se introducen genes de especies que no podrían cruzarse en la naturaleza.](/images/agroalimentando.com.jpg "En los cultivos transgénicos se introducen genes de especies que no podrían cruzarse en la naturaleza.")
 
 **Peligros de los transgénicos**
 
@@ -50,7 +50,7 @@ Las semillas obtenidas tras la cosecha OGM no pueden ser sembradas porque violar
 
 El desempleo sería otra de las consecuencias debido a la mecanización de la mano de obra y el éxodo rural hacia las ciudades. Del mismo modo, para aprovechar las nuevas tecnologías se requiere inversión. Los agricultores en nuestro país no pueden acceder a esos recursos y quedan fuera de la modernización y en peores condiciones para competir con las producciones extranjeras.
 
-***Dinero a costa de la salud mundial***
+**Dinero a costa de la salud mundial**
 
 Debemos de tener presente que la explotación comercial de la biotecnología moderna solo está al alcance de unas pocas empresas multinacionales. Nuevamente nos encontramos con la eterna dependencia económica de los países subdesarrollados a los grupos de poder. El modelo económico privilegia las ganancias de un “lobby”, que ha monopolizado de forma interesada el registro de patentes de semillas en el mundo.
 
