Update Posts “𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬”

--- a/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
+++ b/content/posts/𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬
+slug: 𝐋𝐨𝐬-𝐭𝐫𝐚𝐧𝐬𝐠𝐞𝐧𝐢𝐜𝐨𝐬-𝐲-𝐬𝐮-𝐢𝐦𝐩𝐚𝐜𝐭𝐨-𝐞𝐧-𝐥𝐚-𝐯𝐢𝐝𝐚-𝐝𝐞-𝐥𝐚𝐬-𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬
 title: 𝐋𝐨𝐬 𝐭𝐫𝐚𝐧𝐬𝐠𝐞́𝐧𝐢𝐜𝐨𝐬 𝐲 𝐬𝐮 𝐢𝐦𝐩𝐚𝐜𝐭𝐨 𝐞𝐧 𝐥𝐚
   𝐯𝐢𝐝𝐚 𝐝𝐞 𝐥𝐚𝐬 𝐩𝐞𝐫𝐬𝐨𝐧𝐚𝐬
 date: 2021-05-12
