--- a/content/posts/laboratorio.mdx
+++ b/content/posts/laboratorio.mdx
@@ -6,6 +6,7 @@ date: 2021-06-27
 author: Melissa
 tags:
   - naturaleza
+  - biodiversidad
 image: /images/foto-namru3.jpg
 ---
 ## ***El Perú es el segundo país en América Latina en cuanto a número de casos positivos de Covid 19.***
