Update Posts “biodiversidad”

--- a/content/posts/biodiversidad.mdx
+++ b/content/posts/biodiversidad.mdx
@@ -7,71 +7,42 @@ author: Melissa
 tags:
   - biodiversidad
   - naturaleza
+  - seguridad alimentaria
 image: /images/bayer-sin-abejas-no-hay-futuro.jpg
 ---
 * ## ***Los herbicidas están matando a las abejas. Los químicos están reduciendo la biodiversidad, contaminan el agua, que luego se detecta en el agua potable y en la orina de los adultos en las comunidades.***
 
 Una vez más, los gigantes agroquímicos aprovechan las laxas regulaciones de países en desarrollo para vender allí pesticidas que han sido prohibidos en la Unión Europea. Uno de esos países es México.
 
-
-
 ![Bayer: Sin abejas no hay futuro](/images/bayer-sin-abejas-no-hay-futuro.jpg "Bayer: Sin abejas no hay futuro")
-
- 
 
 La economista Irma Gutiérrez de la Alianza Maya por las Abejas, explica que la organización reúne a cerca de 25.000 familias de apicultores de los estados de Campeche, Yucatán y Quintana Roo; la región aporta un 40% de la producción de miel mexicana, el país es el sexto productor a nivel mundial. El principal consumidor de la miel proveniente de esta región es **Alemania.**  
 
- 
-
 Gutiérrez participó en un debate virtual convocado por la sección alemana PAN Germany de la Red Internacional de Acción en Plaguicidas (PAN), la ONG Inkota, y la Fundación Rosa Luxemburgo, que presentaron conjuntamente un estudio que revela que, pese a la prohibición europea, los gigantes agroquímicos **BAYER** y **BASF** se benefician de laxas regulaciones en países en desarrollo para exportar sus pesticidas dañinos a la salud humana. Además de México, figuran Brasil y Sudáfrica. Un "doble estándar", según indica el estudio.
-
- 
 
 **BAYER** y **BASF**, según el estudio, **son responsables del desarrollo y comercialización de por lo** **menos 33 sustancias nocivas para la salud humana**. Muchos de estos agrotóxicos son mortales con una baja dosificación, otros son cancerígenos, mutágenos, que alteran permanentemente el ADN de las células, o son tóxicos para la reproducción, es decir, pueden provocar abortos o daños al feto en desarrollo.
 
- 
-
 Los autores del estudio destacan que, aunque Bayer se comprometió en 2013 a no comercializar más sustancias tóxicas como el químico “**fenamifos”**, éste se vende en Brasil, Argentina y otros países latinoamericanos como Nemacur.  
-
- 
 
 Irma Gómez, que trabaja en La Alianza Maya por las Abejas desde 1992, destaca que en México se ha generado un proceso de resistencia contra los agrotóxicos, integrado por científicos, campesinos, organizaciones civiles, consumidores, e incluso artistas. "Ellos son la fuente de estrategias creativas para pelear en distintos frentes, desde el ámbito educativo, el legal, los medios de comunicación, los grupos de lobby, y el gobierno”.
 
- 
-
 **Uno de los objetivos de lucha de esos colectivos ha sido la prohibición del glifosato, un herbicida utilizado en los cultivos de soya transgénica, que se ha convertido en una amenaza para los apicultores de la península de Yucatán.**
-
- 
 
 La apicultura es la principal fuente de ingresos de las comunidades mayas de esa región, un conocimiento que se ha convertido en parte de su cultura y se transmite de generación en generación.
 
- 
-
 **La expansión de la soya transgénica ha estado acompañada de incendios y deforestación. Tan sólo el estado de Campeche perdió alrededor de 40.000 hectáreas de cobertura forestal en 2018.**
-
- 
 
 **BAYER PRESIONA A MÉXICO POR EL GLIFOSATO**
 
 México libra una batalla legal contra Monsanto (que adquirió la alemana Bayer en 2018). El Gobierno mexicano decretó el pasado 31 de diciembre la prohibición del glifosato que produce *Monsanto, y del maíz transgénico,* los cuales desaparecerán de los cultivos en 2024. 
 
- 
-
 Sin embargo, el gigante agroquímico busca presionar judicialmente a México para que revierta su decisión. El magistrado Francisco Javier Rebolledo concedió **el pasado 15 de abril un recurso legal a Bayer Monsanto, otorgándole una suspensión provisional que le permite seguir comercializándolo hasta que se resuelva el juicio que inició Monsanto unos días antes.**  
-
- 
 
 La Secretaría de Medio Ambiente de México (SEMARNAT) recurrió al fallo y criticó duramente la ofensiva de Monsanto para evitar la prohibición del herbicida. México se sumó a un creciente número de países que han prohibido la sustancia después de que la Organización Mundial de la Salud (OMS) la clasificara como cancerígena, en 2015.
 
- 
-
 "Durante las últimas dos décadas la cantidad de pesticidas ha ido en aumento, en estos años los herbicidas han sido subvencionados por las autoridades federales y estatales", advierte la activista, que añade que los apicultores han sido actores muy importantes para dar marcha atrás a estas prácticas.
 
- 
-
 **ARGENTINA: MULTAS A EMPRESAS QUE CONTAMINAN EL MEDIO AMBIENTE**
-
- 
 
 El Organismo Provincial para el Desarrollo Sostenible (OPDS) multó por **$783.990.993 a 26 compañías que arrojan sus residuos, muchos de los cuales poseen pesticidas, plaguicidas y herbicidas, en canteras y campos abiertos no aptos en toda la Provincia para tratarlos.** 
 
@@ -79,38 +50,22 @@ Es así como el OPDS envió cartas documento a 107 empresas que estuvieron o est
 
 Cuando no se gestionan adecuadamente los envases son enterrados, quemados a cielo abierto, arrojados en basurales destinados a residuos urbanos o en cualquier sitio. Los restos que contienen estos recipientes los hacen peligrosos para la salud humana y el ambiente. En otros casos son vendidos ilegalmente a acopiadores no habilitados y terminan así en circuitos de reciclado de plásticos comunes, lo que genera presencia de agroquímicos en productos elaborados con plástico reciclado como vasos, cubiertos descartables o juguetes. 
 
- 
+**El gobierno multó a Monsanto Argentina S.R.L. por $76.957.232 y a Bayer S.A. $55.167.094. Lo cierto es que las razones sociales de las compañías constituyen hoy una única empresa (Bayer) por lo que ocupan el primer lugar en el orden de las multas por un total de $132.124.126. Otras empresas son Syngenta Agro S.A. por $ 86.468.800, Atanor S.C.A. por $81.929.188, Sigma Agro S.A. por $8.560.411, y Dupont Argentina S.R.L por $ 8.041.598.**
 
-**El gobierno multó a Monsanto Argentina S.R.L. por $76.957.232 y a Bayer S.A. $55.167.094. Lo cierto es que las razones sociales de las compañías constituyen hoy una única empresa (Bayer) por lo que ocupan el primer logar en el orden de las multas por un total de $132.124.126. Otras empresas son Syngenta Agro S.A. por $ 86.468.800, Atanor S.C.A. por $81.929.188, Sigma Agro S.A. por $8.560.411, y Dupont Argentina S.R.L por $ 8.041.598.**
-
-![](/images/abejitas.png)
-
-
+![Multas por inadecuada gestión de envases vacíos de fitosanitarios](/images/abejitas.png "Multas por inadecuada gestión de envases vacíos de fitosanitarios")
 
 ¿Cuáles fueron las respuestas de las compañías? **Las empresas indicaron que “apelarán las multas” porque el OPDS “tiene pendientes de aprobación 10 Centros de Almacenamiento Transitorio (CAT) desde septiembre de 2020”. Los mismos son un requisito a las empresas para cumplir con la normativa vigente.**
-
-
 
 Por otra parte, las compañías sancionadas “fueron imputadas por no cumplir con la adecuación del sistema en el marco de los 270 días de plazo que establece la ley desde que el sistema de gestión fue aprobado, y que venció en junio de 2019. La imputación fue hecha 15 meses después de vencidos los plazos de ley y con el sistema sin adecuarse”.
 
 Esperemos que hagan efectiva la multa.
 
- 
-
 ## EN SUDÁFRICA LAS MÁS AFECTADAS SON LAS MUJERES
 
 Estas grandes trasnacionales siguen haciendo negocio, y quienes pagan la cuenta, y con su salud, son los agricultores. "En granjas productoras de vino en la provincia del Cabo Occidental, en Sudáfrica se utiliza en grandes cantidades, entre otros, del **insecticida Tempo SC, de Bayer**, cuyo nombre comercial es **Beta-Cyflutrin**, o **Cyflutrin**, el cual, bajo una pequeña dosificación puede ser mortal", afirma Jan Urhahn, experto para cuestiones agrícolas de la Fundación Rosa Luxemburgo. 
 
- 
-
 El uso seguro de estos agrotóxicos es pura ilusión, afirma el experto. Sudáfrica tiene una gran tradición en la producción de vinos y uvas de calidad que exporta a otros países. Pero lo que sucede en las granjas productoras es algo que los consumidores no conocen.
-
- 
 
 "A unas dos terceras partes de los trabajadores agrícolas expuestos a pesticidas no se les da ropa de protección. Si quieren tener protección, tienen que comprarla ellos mismos", afirma Colette Solomon, de la organización Women on Farms Projects, de Sudáfrica. La activista transmitió los testimonios de algunas de las mujeres entrevistadas por ella. Katrina dice: "Todos mis hijos tienen asma, respiran el pesticida todo el tiempo. Aunque estemos dentro de la casa, se ve una película del pesticida sobre los muebles".
 
- 
-
 Solomon afirma que en números absolutos las mujeres son las más expuestas a los pesticidas. "Es más probable que ellos reciban ropa protectora. Son ellos los que generalmente rocían el herbicida y se van, pero quienes se quedan trabajando en las granjas, sin protección, son las mujeres".
-
-<!--EndFragment-->
