Update Posts “agricultura-1”

--- a/content/posts/agricultura-1.mdx
+++ b/content/posts/agricultura-1.mdx
@@ -17,24 +17,21 @@ Sin embargo, diversas organizaciones civiles ligadas a la producción agraria en
 ![Recursos genéticos](/images/plantastransgenicos57.jpg "Recursos genéticos")
 
 \
-\
 Juan Sánchez, director ejecutivo de la Red de Agricultura Ecológica del Perú, sostiene que la finalidad de este pedido fue “tener más tiempo para debatir las consecuencias del reglamento y la posibilidad de que haya consultas previas, como dice la norma. Se tienen que implementar los pasos para que en los próximos 15 años se pueda asegurar lo que no se obtuvo en los 10 anteriores”, precisó.
 
-\
 Por su parte, La Comisión Regional sobre Agrobiodiversidad y Defensa del Patrimonio Biocultural del Cusco pidió una ampliación de 120 días para la “legítima consulta de los pueblos indígenas y pequeños agricultores”. Una posición similar dio el Frente Popular Agrícola Fía del Perú (Frepap).
 
-\
 No obstante, Sánchez resalta que el periodo debe ajustarse para que el actual gobierno apruebe los nuevos aportes. “La ley de agricultura orgánica demoró cuatro años en su reglamento. La ley de alimentos saludables, igual. Parece una tradición en el Estado”, relató.
+
+
 
 ![alimentos modificados genéticamente](/images/maiz.png "Alimentos modificados genéticamente")
 
-\
 \
 **Conflicto de intereses**
 
 En opinión de los gremios involucrados en el proceso de consulta pública, la participación de la Asociación Peruana de Semillas (APESemillas) en la Comisión Multisectorial de Asesoramiento resulta innecesaria, toda vez que el ingreso de transgénicos está limitado ya por ley.
 
-\
 Flora Luna, asesora científica de la Asociación Peruana de Consumidores y Usuarios (Aspec), atribuye este conflicto a la presencia de lobbies en la región para impulsar monocultivos.\
 \
 “En la selva, el Ministerio del Ambiente no tiene el poder vinculante de exigir que cualquier institución u otro ministerio cumpla con la protección ambiental. Perú es hoy el país con más arbitrajes pendientes de grandes transnacionales”, dijo.\
@@ -90,7 +87,7 @@ Por el contrario, el proyecto de reglamento propone modificaciones sustanciales 
 
 ● Cambio en el concepto de espacio confinado con fines de investigación en OVM, introduciendo el término de campos experimentales, lo que representa un serio riesgo de liberación accidental al ambiente de los potenciales OVM que puedan ser investigados.
 
-● Asignar solo a MINAM como Autoridad Nacional Competente en el ámbito de la Ley N° 29811 con la facultad de establecer la condición de OVM a los a productos u organismos desarrollados a partir de nuevas tecnologías de modificación genética, lo que representa un riesgo de introducción de otras formas de OVM que pueden afectar nuestra biodiversidad4 y causar rechazo a las exportaciones peruanas a otros países ante el riesgo de contaminación genética. Así como los puntos críticos indicados, puede haber otros que requieran de más tiempo para un análisis más acucioso y un mayor esclarecimiento político y técnico, lo que requiere realizar consultas públicas a nivel regional y nacional con los actores claves directamente involucrados con la conservación y el uso sostenible de nuestra biodiversidad. Por todo ello, demandaron:
+● Asignar sólo a MINAM como Autoridad Nacional Competente en el ámbito de la Ley N° 29811 con la facultad de establecer la condición de OVM a los a productos u organismos desarrollados a partir de nuevas tecnologías de modificación genética, lo que representa un riesgo de introducción de otras formas de OVM que pueden afectar nuestra biodiversidad4 y causar rechazo a las exportaciones peruanas a otros países ante el riesgo de contaminación genética. Así como los puntos críticos indicados, puede haber otros que requieran de más tiempo para un análisis más acucioso y un mayor esclarecimiento político y técnico, lo que requiere realizar consultas públicas a nivel regional y nacional con los actores claves directamente involucrados con la conservación y el uso sostenible de nuestra biodiversidad. Por todo ello, demandaron:
 
 ● Ampliar la consulta pública al reglamento de la Ley N° 31111 por 30 días útiles, para garantizar un amplio debate nacional y regional donde participen los actores claves vinculados con los objetivos de la ley de ampliación de la moratoria.
 
