Update Posts “agricultura-1”

--- a/content/posts/agricultura-1.mdx
+++ b/content/posts/agricultura-1.mdx
@@ -1,5 +1,5 @@
 ---
-slug: agricultura
+slug: conflicto
 title: CONFLICTO DE INTERESES EN REGLAMENTO QUE ESTABLECE MORATORIA DE OVM
 date: 2021-06-27
 author: Melissa
